--- a/2022/07.md
+++ b/2022/07.md
@@ -6,3 +6,4 @@
 ## 2022-07-28
 
 1. 이벤트 버블링 관련하여 `preventDefault, stopPropagation` 사용하고 내용 정독함.
+2. `Vue` 에서 `v-for, v-if` 동시 사용 관련 우선 순위 공부. (동시 사용은 불가능하며, 우회하여 template 을 이용하여 구분하여 처리.)
