--- a/2022/07.md
+++ b/2022/07.md
@@ -7,3 +7,43 @@
 
 1. 이벤트 버블링 관련하여 `preventDefault, stopPropagation` 사용하고 내용 정독함.
 2. `Vue` 에서 `v-for, v-if` 동시 사용 관련 우선 순위 공부. (동시 사용은 불가능하며, 우회하여 template 을 이용하여 구분하여 처리.)
+
+## 2022-07-31
+
+1. `Vue` 에서 `$Emit` 문법
+- 자식 컴포넌트에서 props.value 값을 직접 변경해서는 부모의 컴포넌트의 value 를 바꿀 수 없다. 따라서 자식 컴포넌트에서 변경된 값을 부모 컴포넌트의 value 값으로 업데이트 하도록 할 수 있는 문법
+- @메서드 이름 으로 바인딩시켜 사용한다.
+
+2. `$event` 를 이용하여 메서드 없이 바로 인자를 넘겨줄 수 있음.
+
+```html
+
+<!---------자식---------->
+<template>
+    <h2>자식 컴포넌트</h2>
+    <input type = "text" :value = "title" @input = "$emit('titleFromChild', $event.target.value)">
+</template>
+
+<!---------부모---------->
+<template>
+  <div>
+    <h1>부모 컴포넌트</h1>
+    <inputField :title = "title" @titleFromChild = "title = $event" />    
+    {{ title }}
+  </div>  
+</template>
+ 
+...
+ 
+<script>
+  components: {
+    inputField: inputField,
+  },
+  date() {
+    return {
+      title : ""
+    }
+  }
+</script>
+
+```
