--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,7 @@
 ## 2022-08-01
 
 1. `float, clear` 속성을 이용한 css 작업 (float 사용시 이 후에 오는 요소들이 둘러쌓이는 현상이 발생하는데 이를 `clear: none` 을 줘서 해결.)
+
+## 2022-08-02
+
+1. `vue` 에서 `Form` 요소 개발시 `v-model` 사용하여 양방향데이터 관리
