--- a/2022/08.md
+++ b/2022/08.md
@@ -5,3 +5,7 @@
 ## 2022-08-02
 
 1. `vue` 에서 `Form` 요소 개발시 `v-model` 사용하여 양방향데이터 관리
+
+## 2022-08-03
+
+1. `vue` 에서 `router-link` 사용 관련 속성 `tag, active-class`
