--- a/2022/08.md
+++ b/2022/08.md
@@ -9,3 +9,4 @@
 ## 2022-08-03
 
 1. `vue` 에서 `router-link` 사용 관련 속성 `tag, active-class`
+2. `vue` 에서 `form` 사용시 `@submit.prevent` 를 사용하면, `event.preventDefault() + submit` 을 이용할 수 있다.
