`vue` 에서 `router.js` 에 `childern` 속성 사용.

--- a/2022/08.md
+++ b/2022/08.md
@@ -10,3 +10,7 @@
 
 1. `vue` 에서 `router-link` 사용 관련 속성 `tag, active-class`
 2. `vue` 에서 `form` 사용시 `@submit.prevent` 를 사용하면, `event.preventDefault() + submit` 을 이용할 수 있다.
+
+## 2022-08-04
+
+1. `vue` 에서 `router.js` 에 `childern` 속성 사용.
