callback 함수 기능 만들시 call 함수 사용

--- a/2022/08.md
+++ b/2022/08.md
@@ -14,3 +14,7 @@
 ## 2022-08-04
 
 1. `vue` 에서 `router.js` 에 `childern` 속성 사용.
+
+## 2022-08-05
+
+1. `callback` 함수 기능을 만드는데, `call` 함수를 이용해 `callback` 의 `this` 를 변경할 수 있음.
