`vue` 에서 `v-if`(안그림) 와 `v-show`(display:none) 차이점.

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,20 +1,24 @@
-## 2022-08-01
+## 2022-08-05
 
-1. `float, clear` 속성을 이용한 css 작업 (float 사용시 이 후에 오는 요소들이 둘러쌓이는 현상이 발생하는데 이를 `clear: none` 을 줘서 해결.)
+1. `vue` 에서 `v-if`(안그림) 와 `v-show`(display:none) 차이점.
 
-## 2022-08-02
+## 2022-08-05
 
-1. `vue` 에서 `Form` 요소 개발시 `v-model` 사용하여 양방향데이터 관리
+1. `callback` 함수 기능을 만드는데, `call` 함수를 이용해 `callback` 의 `this` 를 변경할 수 있음.
+
+## 2022-08-04
+
+1. `vue` 에서 `router.js` 에 `childern` 속성 사용.
 
 ## 2022-08-03
 
 1. `vue` 에서 `router-link` 사용 관련 속성 `tag, active-class`
 2. `vue` 에서 `form` 사용시 `@submit.prevent` 를 사용하면, `event.preventDefault() + submit` 을 이용할 수 있다.
 
-## 2022-08-04
+## 2022-08-02
 
-1. `vue` 에서 `router.js` 에 `childern` 속성 사용.
+1. `vue` 에서 `Form` 요소 개발시 `v-model` 사용하여 양방향데이터 관리
 
-## 2022-08-05
+## 2022-08-01
 
-1. `callback` 함수 기능을 만드는데, `call` 함수를 이용해 `callback` 의 `this` 를 변경할 수 있음.
+1. `float, clear` 속성을 이용한 css 작업 (float 사용시 이 후에 오는 요소들이 둘러쌓이는 현상이 발생하는데 이를 `clear: none` 을 줘서 해결.)
