--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,8 @@
+## 2022-08-07
+
+1. 리눅스 에 ssh 를 이용하여 파일을 전송할려고 했는데, ssh 가 설치되지 않았음. ssh 를 설치할려고 했는데 생각처럼 잘 되지 않는 문제가 발생함. <br/>
+`Tera Term` 이라는 ssh 접속 프로그램을 이용하여 ssh 를 생성 후, `winscp` 를 이용하여 파일을 전송할 수 있었음. 
+
 ## 2022-08-06
 
 1. `vue` 에서 `v-if`(안그림) 와 `v-show`(display:none) 차이점.
