No space left on device 해결법

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,8 @@
+## 2022-08-09
+
+1. `No space left on device` 오류는 장치에 용량이 꽉 찼을 때 발생하며, 꽉 찬 용량의 파일을 삭제해주면 됩니다. <br/>
+우선 `df -h` 명령어를 이용하여 장치의 용량을 확인한 뒤, 꽉찬 파일로 가서 `rm -f *` 을 해주면 해당 오류가 다시 발생하지 않습니다.
+
 ## 2022-08-07
 
 1. 리눅스 에 ssh 를 이용하여 파일을 전송할려고 했는데, ssh 가 설치되지 않았음. ssh 를 설치할려고 했는데 생각처럼 잘 되지 않는 문제가 발생함. <br/>
