--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,7 @@
+## 2022-08-10
+
+1. `$nextTick` 을 이용하여 `mounted` 시점을 정상으로 잡도록함. (그렇지 않으면, 가끔 돔이 그려지지 않아 오류가 발생함.)
+
 ## 2022-08-09
 
 1. `No space left on device` 오류는 장치에 용량이 꽉 찼을 때 발생하며, 꽉 찬 용량의 파일을 삭제해주면 됩니다. <br/>
