--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,7 @@
+## 2022-08-11
+
+1. `process.env` 에 환경변수들이 저장되어 있음. 그거를 확인하여 테마를 변경할 수 있음.
+
 ## 2022-08-10
 
 1. `$nextTick` 을 이용하여 `mounted` 시점을 정상으로 잡도록함. (그렇지 않으면, 가끔 돔이 그려지지 않아 오류가 발생함.)
