process.env.theme 사용

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,6 +1,6 @@
 ## 2022-08-11
 
-1. `process.env` 에 환경변수들이 저장되어 있음. 그거를 확인하여 테마를 변경할 수 있음.
+1. `process.env` 에 환경변수들이 저장되어 있음. 그거를 확인하여 테마를 변경할 수 있음. (ex: theme=red yarn build 이렇게 할시 `process.env.theme` 에 `red` 값이 넘어옴.)
 
 ## 2022-08-10
 
