vue-vis-network 를 이용하여 간단한 네트워크 그래프 예제

--- a/2022/08.md
+++ b/2022/08.md
@@ -3,6 +3,8 @@
 1. `Component name "network" should always be multi-word.` 에러는 컴포넌트를 만들 때, 하나의 이름으로 만드는 경우 발생합니다. <br/>
 해결방법으로는 컴포넌트 이름을 만들 때, 두개 이상의 단어를 합쳐서 만들면 됨. (`visNetwork`)
 
+2. `vue-vis-network` 를 이용하여 간단한 네트워크 그래프 예제 생성
+
 ## 2022-08-11
 
 1. `process.env` 에 환경변수들이 저장되어 있음. 그거를 확인하여 테마를 변경할 수 있음. (ex: theme=red yarn build 이렇게 할시 `process.env.theme` 에 `red` 값이 넘어옴.)
