--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,7 @@
+## 2022-08-14
+
+1. `vue-vis-network` 를 사용하여 네트워크 그래프에 `Node.image, edge 속성` 을 이용하여 네트워크 그래프 강화.
+
 ## 2022-08-13
 
 1. `Component name "network" should always be multi-word.` 에러는 컴포넌트를 만들 때, 하나의 이름으로 만드는 경우 발생합니다. <br/>
