`nvm` 을 사용해서 `node` 모듈 관리하는 법 복습

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,7 @@
+## 2022-08-16
+
+1. `nvm` 을 사용해서 `node` 모듈 관리하는 법 복습
+
 ## 2022-08-14
 
 1. `vue-vis-network` 를 사용하여 네트워크 그래프에 `Node.image, edge 속성` 을 이용하여 네트워크 그래프 강화.
