`::after, ::before` 의 경우, 설정시 가상돔에 적용되기 때문에 돔에 대해 접근할 수가 없음.

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,7 @@
+## 2022-08-17
+
+1. `::after, ::before` 의 경우, 설정시 가상돔에 적용되기 때문에 돔에 대해 접근할 수가 없음.
+
 ## 2022-08-16
 
 1. `nvm` 을 사용해서 `node` 모듈 관리하는 법 복습
