vue 에서 overlay 제거

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,16 @@
+## 2022-08-18
+
+1. `vue` 에서 overlay(에러 발생시 오버레이 발생하여 화면을 가리는 기능) 제거. 
+
+```js
+// vue.config.js
+module.exports = {
+	devServer: {
+    	overlay: false
+    }
+}
+```
+
 ## 2022-08-17
 
 1. `::after, ::before` 의 경우, 설정시 가상돔에 적용되기 때문에 돔에 대해 접근할 수가 없음.
