vue 에서 없는 페이지 접근관련 처리 방법

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,29 @@
+## 2022-08-19
+
+1. `vue` 에서 없는 페이지 접근관련 처리 방법
+
+```js
+export const routes = [
+	{
+		path: '/',
+		name: 'main',
+		component: Main
+	},
+	{
+		path: '/login',
+		name: 'login',
+		component: Login
+	},
+    // 아래와 같이 path: '*' 로 처리하여 줍니다.
+	{
+		path: '*',
+		name: 'notfound',
+		component: NotFound
+	}
+]
+
+```
+
 ## 2022-08-18
 
 1. `vue` 에서 overlay(에러 발생시 오버레이 발생하여 화면을 가리는 기능) 제거. 
