eslint lhs 관련 오류 해결

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,8 @@
+## 2022-08-21
+
+1. `eslint lhs` 관련하여 `v-model` 에서 부정연산(!) 사용시 `eslint` 에서 `lhs` 관련 오류를 뱉게 됩니다.
+`eslint` 를 건들이지 않고 해결 방법은 `computed` 에 `getter` 를 하나 생성하여 처리하였습니다.
+
 ## 2022-08-19
 
 1. `vue` 에서 없는 페이지 접근관련 처리 방법
