env 파일을 이용해서, vue 빌드시 환경변수를 이용한 처리

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,14 @@
+## 2022-08-23
+
+1. env 파일을 이용해서, vue 빌드시 환경변수를 이용한 처리를 할 수 있다.
+
+.env.prod
+```
+VUE_PROD = prod
+```
+
+process.env.VUE_PROD 를 사용할 수 있다. 해당 객체 안에는 prod 가 들어 있음.
+
 ## 2022-08-21
 
 1. `eslint lhs` 관련하여 `v-model` 에서 부정연산(!) 사용시 `eslint` 에서 `lhs` 관련 오류를 뱉게 됩니다.
