--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,13 @@
+## 2022-08-25
+
+1. jest coverage 관련 공부 (coverage 를 사용하여, 브라우저/UI 테스트에서 이용할 수 있는 방법이 뭐가 있을까에 대한 고민, 기본적으로 백앤드에서 많이 사용한다고 함.)
+화면단에 뿌려지는 리스트에 대한 데이터 비교를 하는 테스트 API 를 하나 만든 뒤, 해당 API 에 대한 결과값과 비교할 수 있는 coverage 를 만들 수 있지 않을까? (정말 유효할지는 잘 모르겠음.)
+화면에 뿌려지기 전 데이터와 뿌려진 이후에 대한 데이터를 비교하는 coverage.
+
+```cmd
+jest --coverage
+```
+
 ## 2022-08-23
 
 1. env 파일을 이용해서, vue 빌드시 환경변수를 이용한 처리를 할 수 있다.
