--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,50 @@
+## 2022-08-26
+
+1. Mocking (모킹) 관련 개념공부
+
+- 테스트하고자 하는 코드가 의존하는 함수, 클래스 등에 대해 모조품을 만들어 일단 돌아가게 하는 것이다.
+- 내가 테스트 하고 싶은 기능이 다른 기능들과 엮여있을 경우, 정확한 테스트를 하기 힘들기 때문에 테스트하고자 하는 결과값을 가진 모조품을 만들어 이를 대체하는 것입니다.
+
+2. Jest 에서 Mocking 메소드
+
+- jest.fn(): jest 는 가짜 함수를 생성할 수 있도록 해당 함수를 제공합니다. 이를 이용해 일회성 테스트용도로 코드를 구동시킬 수 있음.
+
+.mockReturnValue(value): mock 의 리턴값을 지정합니다. 
+
+```js
+const mock = jest.fn();
+
+mock.mockReturnValue(100);
+mock(); // 100
+```
+
+.mockImplemetation(value): 즉석 함수를 구현할 수 있음.
+
+```js
+const mock = jest.fn();
+
+mock.mockImplemetation(name => `${name}, Hello World!`);
+mock('Kim') // Kim, Hello World!
+```
+
+.mockResolvedValue(value) / .mockRejectedValue(value): 비동기 함수에서 resolve 와 reject 를 받을 수 있다.
+
+```js
+test('async resolve', async() => {
+	const mock = jest.fn();
+	const asyncMock = mock.mockResolvedValue(100);
+
+	await asyncMock(); // 100
+});
+
+test('async reject', async() => {
+	const mock = jest.fn();
+	const asyncMock = mock.mockResolvedValue(new Error('Error'));
+
+	await asyncMock(); // Error
+})
+```
+
 ## 2022-08-25
 
 1. jest coverage 관련 공부 (coverage 를 사용하여, 브라우저/UI 테스트에서 이용할 수 있는 방법이 뭐가 있을까에 대한 고민, 기본적으로 백앤드에서 많이 사용한다고 함.)
