vuex 사용시 getter 사용

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,12 @@
+## 2022-08-27
+
+1. vuex 사용시 getter 사용
+
+- 각 Components의 계산된 속성(computed) 의 공통 사용 정의
+- 여러 Components에서 동일한 computed 가 사용 될 경우 Getters에 정의하여 공통으로 쉽게 사용할 수 있습니다.  
+- 하위 모듈의 getters를 불러오기 위해서는 특이하게 this.$store.getters["경로명/함수명"]; 을 사용해야 합니다.
+
+
 ## 2022-08-26
 
 1. Mocking (모킹) 관련 개념공부
