--- a/2022/08.md
+++ b/2022/08.md
@@ -6,6 +6,7 @@
 - 여러 Components에서 동일한 computed 가 사용 될 경우 Getters에 정의하여 공통으로 쉽게 사용할 수 있습니다.  
 - 하위 모듈의 getters를 불러오기 위해서는 특이하게 this.$store.getters["경로명/함수명"]; 을 사용해야 합니다.
 
+2. commit('경로명/함수명', 인자값) 을 넣어 인자를 전달함.
 
 ## 2022-08-26
 
