git branch 폴더 생성하여 브랜치를 관리할 수 있음.

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,8 @@
+## 2022-08-29
+
+1. git branch 폴더 생성하여 브랜치를 관리할 수 있음.
+branch 생성시 test/test_1 이런 식으로 생성하게 되면, test 라는 폴더 아래에 test_1 이라는 브랜치가 만들어지는 것을 볼 수 있음. 폴더 별로 브랜치를 관리할 수 있어 좀 더 관리하기가 용이해짐.
+
 ## 2022-08-27
 
 1. vuex 사용시 getter 사용
