`Debounce` 사용하여 이벤트 제한하여 성능 개선

--- a/2022/08.md
+++ b/2022/08.md
@@ -1,3 +1,23 @@
+## 2022-08-30
+
+1.`Debounce` 사용하여 이벤트 제한하여 성능 개선
+DOM 이벤트를 기반으로 실행하는 자바스크립트의 성능을 위해 이벤트(event)를 제어(제한) 할 수 있는 방법입니다.
+예를 들어 `onscroll` 이벤트에서 스크롤 할 때 마다 무언가를 한다면, 엄청난 리소스가 발생할 것 입니다. <br/>
+이 때 `Debounce` 를 사용하여, 여러 이벤트가 발생한 최종에서 한 번 이벤트를 발생하도록 하여 성능문제를 개선할 수 있습니다.
+
+```js
+window.addEventListener('scroll', _.debounce(function (e) {
+	if ( m_pos.pop() < window.scrollY ) {
+		document_el.classList.add('upper');
+		document_el.classList.remove('lower');
+	} else {
+		document_el.classList.add('lower');
+		document_el.classList.remove('upper');
+	}
+	m_pos.push(window.scrollY);
+}, 100));
+```
+
 ## 2022-08-29
 
 1. git branch 폴더 생성하여 브랜치를 관리할 수 있음.
