debounce 함수 예제 추가

--- a/2022/08.md
+++ b/2022/08.md
@@ -18,6 +18,23 @@ window.addEventListener('scroll', _.debounce(function (e) {
 }, 100));
 ```
 
+```js
+function debounce(func, delay = 0) {
+    let time = null;
+    
+    return function() {
+        const context = this;
+        const args = arguments;
+        
+        if (time) {
+            clearTimeout(time);
+        }
+        
+        time = setTimeout(() => func.apply(context, arguments), delay);
+    };
+}
+```
+
 ## 2022-08-29
 
 1. git branch 폴더 생성하여 브랜치를 관리할 수 있음.
