--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,30 @@
+## 2022-09-02
+
+1. vue 에서 typescript 기반으로 만들고 싶으면, vue-property-decorator 기능을 사용하셔야 합니다.
+
+아래와 같이 prop, mounted 등의 기능을 사용할 수 있고 computed 는 앞에 get 을 붙여 사용할 수 있습니다.
+
+```
+import { Component, Prop, Vue } from 'vue-property-decorator';
+
+@Component
+export default class TestComponent extends Vue {
+  @Prop({ type: String })
+  test!: string;
+
+  mounted () {
+	}
+
+	destroyed() {
+
+	}
+
+	get testRules () {
+		return "testRuels"
+	}
+}
+```
+
 ## 2022-09-01
 
 1. VSCode `setting.json`에 아래와 같이 설정해 놓으면 저장 할 때마다 eslint를 적용해서 파일을 변경해준다.
