테이블 리스트 무브 시키는 로직 추가

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,27 @@
+## 2022-09-03
+
+1. 테이블 리스트 무브 시키는 로직 추가 
+
+테이블 객체를 배열형태로 저장 후, up, down 로직을 눌러 행을 위, 아래로 무브 시키고 시키는 로직 구현. (vue 환경에서 구현함.)
+```js
+// 행 인덱스와 무브시키고자 하는 value 를 받아옴.
+onMoveRow (rowIndex, moveValue) {
+  if (this.dataRow.length < 0) return;
+
+  // 움직이고자 하는 포지션 계산
+  const newPosi = rowIndex + moveValue;
+
+  if (newPosi < 0 || newPosi >= this.dataRow.length) return;
+
+  const tempList = JSON.parse(JSON.stringify(this.dataRow));
+  const target = tempList.splice(rowIndex, 1)[0];
+  tempList.splice(newPosi, 0, target);
+
+  // 테이블 데이터를 새롭게 바인딩 시킴.
+  this.dataRow = tempList;
+}
+```
+
 ## 2022-09-02
 
 1. vue 에서 typescript 기반으로 만들고 싶으면, vue-property-decorator 기능을 사용하셔야 합니다.
