--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,38 @@
+## 2022-09-04
+
+1. vue 에서 draggable 속성 사용
+
+아래와 같이 요소에 draggable 속성을 사용해줍니다. 
+@drop 이벤트를 사용하기 위해 @dragenter, @dragover 를 막아줍니다.
+
+```html
+<tr
+  draggable="true"
+  @dragstart="startDrag($event, rowIdx)"
+  @drop.prevent="onDrop($event, rowIdx)"
+  @dragenter.prevent
+  @dragover.prevent
+  v-for="(row, rowIdx) in rows"
+  :key="rowIdx"
+>
+```
+
+아래와 같이 함수를 생성해주고, 로그에 관련 row 정보, 그리고 event 를 확인할 수 있습니다.
+```js
+startDrag(event, startNum) {
+  console.log('startDrag', event);
+  event.dataTransfer.dropEffect = "move"
+  event.dataTransfer.effectAllowed = "move"
+  event.dataTransfer.setData("selectedItem", startNum)
+},
+onDrop(event, endNum) {
+  const selectedItem = Number(event.dataTransfer.getData("selectedItem"))
+  console.log('onDrop', event);
+  console.log(this.rows[endNum], this.rows[selectedItem])
+}
+```
+
+
 ## 2022-09-03
 
 1. 테이블 리스트 무브 시키는 로직 추가 
