git hooks 관련 내용 추가

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,23 @@
+## 2022-09-05
+
+1. git hooks 를 이용하여 깃 커밋전 코드 규격에 대한 이벤트를 걸어서 제한을 걸 수 있다. (이를 이용하여 구성원의 소스를 eslint 에 맞게끔 통일할 수 있음.)
+일반적으로 husky, lint-staged 를 사용하여 처리함.
+
+lint-staged 버전이 v10 부터는 git add 가 자동으로 추가된다고 함.
+commit 전 lint-staged 에 js 파일들을 검사해서 fix 한다는 이벤트를 설정할 수 있음.
+```json
+"husky": {
+  "hooks": {
+    "pre-commit": "lint-staged"
+  }
+},
+"lint-staged": {
+  "*.js": [
+    "eslint --fix"
+  ]
+}
+```
+
 ## 2022-09-04
 
 1. vue 에서 draggable 속성 사용
