--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,10 @@
+## 2022-09-06
+
+1. vue 에서 click 이벤트 관련 방지
+
+@click.stop: 이벤트가 전파되는 것을 방지 (stopPropagation() 과 동일)
+@click.prevent: 이벤트 실행 중단 (preventDefault() 과 동일)
+
 ## 2022-09-05
 
 1. git hooks 를 이용하여 깃 커밋전 코드 규격에 대한 이벤트를 걸어서 제한을 걸 수 있다. (이를 이용하여 구성원의 소스를 eslint 에 맞게끔 통일할 수 있음.)
