--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,12 @@
+## 2022-09-07
+
+1. vuex 의 경우, state, mutations, actions, getters, modules 를 가지고 있음.
+- state 는 vuex 의 변수를 의미
+- mutations 는 vuex 의 변수를 조작할 수 있는 함수를 가지는 객체
+- actions 는 비동기 동작을 가진 mutations
+- getters 는 공통으로 관리할 로직을 관리할 수 있는 방법
+- modules 는 위의 store 동작을 모듈로 분리하여 사용할 수 있는 방법
+
 ## 2022-09-06
 
 1. vue 에서 click 이벤트 관련 방지
