--- a/2022/09.md
+++ b/2022/09.md
@@ -7,6 +7,33 @@
 - getters 는 공통으로 관리할 로직을 관리할 수 있는 방법
 - modules 는 위의 store 동작을 모듈로 분리하여 사용할 수 있는 방법
 
+```js
+const state = {
+	report: []
+}
+
+const getters = {
+	GET_REPORT: state => state.report,
+	GET_REPORTCOUNT: state => state.report.length
+}
+
+const mutations = {
+	SET_REPORT (state, payload) {
+		state.report.push(payload.report)
+	},
+	REMOVE_REPORT (state, payload) {
+		state.report.splice(payload.idx, 1)
+	}
+}
+
+export default {
+	state,
+	getters,
+	mutations
+}
+
+```
+
 ## 2022-09-06
 
 1. vue 에서 click 이벤트 관련 방지
