번들링시 오류 발생할 경우, 아래 명령어로 번들링

--- a/2022/09.md
+++ b/2022/09.md
@@ -31,7 +31,14 @@ export default {
 	getters,
 	mutations
 }
+```
 
+2. 번들링시 오류 발생할 경우, 아래 명령어로 번들링
+```
+  // 기존
+  node_modules/.bin/webpack --mode development --entry ./src/app.js --output dist/main.js
+  // 변경
+  node_modules/.bin/webpack --mode development --entry ./src/app.js --output-path dist
 ```
 
 ## 2022-09-06
