git commit 되돌리기

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,14 @@
+## 2022-09-08
+
+1. `git commit` 되돌리기
+```
+git reset --hard HEAD
+// 2번째 헤더 되돌리기
+git reset --hard HEAD~2
+```
+
+2. 만약, git 에 잘못 push 하면 revert 를 사용하여 되돌리기하면 됨.
+
 ## 2022-09-07
 
 1. vuex 의 경우, state, mutations, actions, getters, modules 를 가지고 있음.
