puppeter 사용시 더블클릭 사용법

--- a/2022/09.md
+++ b/2022/09.md
@@ -9,6 +9,8 @@ git reset --hard HEAD~2
 
 2. 만약, git 에 잘못 push 하면 revert 를 사용하여 되돌리기하면 됨.
 
+3. puppeter 사용시 더블클릭 하기 위해서는 `await page[0].mouse.click(577, 592, { clickCount: 2 });` 다음과 같이 clickCount 를 사용하면 됨.
+
 ## 2022-09-07
 
 1. vuex 의 경우, state, mutations, actions, getters, modules 를 가지고 있음.
