TypeError: this.getOptions is not a function 해결 방법

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,9 @@
+
+## 2022-09-09
+
+1. 로더란, 웹팩이 모든 파일을 모듈로 바라볼 수 있게 해주는 역할.
+2. `TypeError: this.getOptions is not a function` 발생시 대부분 버전문제임으로, 각 버전에 맞는 로더를 설치해주어야 합니다.
+
 ## 2022-09-08
 
 1. `git commit` 되돌리기
