웹팩 플러그인 정리

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,13 @@
+## 2022-09-11
+
+1. 웹팩 plugins 정리
+- `BannerPlugin`: 결과물에 빌드 정보나 커밋 버전 같은 걸 추가할 수 있다.
+- `DefinePlugin`: 프론트 개발은 개발환경과 운영환경으로 나눠서 운영한다. 같은 소스 코드를 두 환경에 배포하기 위해서는 이러한 환경 의존적인 정보를 소스가 아닌 곳에서 관리하는 것이 좋다.
+웹팩은 이러한 환경 정보를 제공하기 위해 DefinePlugin 을 제공한다.
+- `HtmlWebpackPlugin`: HTML 파일을 후처리하는데 사용한다. 빌드 타임의 값을 넣거나 코드를 압축할 수 있다.
+- `CleanWebpackPlugin`: 빌드 이전 결과물을 제거하는 플러그인이다.
+- `MiniCssExtractPlugin`: 번들 결과에서 스타일 시트 코드만 뽑아서 별도의 CSS 파일로 만들어 역할에 따라 파일을 분리한다.
+
 ## 2022-09-10
 
 1. url-loader 를 사용하여, limit 속성을 추가해 file-loader 와 url-loader 를 사용할 수 있음.
