ejs 파일은 자바스크립트가 내장되어 있는 html 파일로 node.js 환경에서 사용

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,8 @@
+## 2022-09-12
+
+1. `ejs 문법`: `ejs` 파일은 자바스크립트가 내장되어 있는 html 파일로 node.js 환경에서 사용합니다. <br/>
+또한, 웹팩 환경에서도 사용할 수 있음. 예시: <%= env %> 이런 식으로 사용할 수 있음.
+
 ## 2022-09-11
 
 1. 웹팩 plugins 정리
