--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,21 @@
+## 2022-09-13
+
+1. Babel Start
+
+크로스 브라우징을 해결하기 위한 것으로 es6 로 작성된 코드를 모든 브라우저에서 동작하도록 호환성을 지켜준다.
+
+아래와 같은 바벨 플러그인을 설치하여 간단한 바벨 플러그인을 설정할 수 있다.
+```
+// const, let 처럼 블록 스코핑을 따르는 예약어를 함수 스코핑을 사용하는 var 변경한다.
+@babel/plugin-transform-block-scoping
+// 인터넷 익스플로러는 화살표 함수도 지원하지 않는데 arrow-functions 플러그인을 이용해서 일반 함수로 변경할 수 있다.
+@babel/plugin-transform-arrow-functions
+// ECMAScript5에서부터 지원하는 엄격 모드를 사용하는 것이 안전하기 때문에 "use strict" 구문을 추가.
+@babel/plugin-transform-strict-mode
+```
+
+preset.js 를 만들어 플러그인을 보관하고 babel.config.js 에서 preset 을 가져와 사용할 수 있음.
+
 ## 2022-09-12
 
 1. `ejs 문법`: `ejs` 파일은 자바스크립트가 내장되어 있는 html 파일로 node.js 환경에서 사용합니다. <br/>
