--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,40 @@
+## 2022-09-14
+
+1. Babel End
+
+바벨로 es6 에서 es5 로 트랜스파일링이 되지 않는 것은 core-js 를 설치 후, 폴리필 설정하여 처리할 수 있음.
+
+babel.config.js
+
+```js
+module.exports = {
+  presets: [
+    ['@babel/preset-env', {
+      targets: {
+        chrome: '79',
+        ie: '11'
+      },
+      useBuiltIns: 'usage', // 'entry', false
+      corejs: {
+        version: 2
+      }
+    }]
+  ]
+}
+```
+
+webpack.config.js
+
+```js
+rules: [
+  {
+    test: /\.js$/,
+    loader: 'babel-loader',
+    exclude: /node_modules/
+  }
+]
+```
+
 ## 2022-09-13
 
 1. Babel Start
