css 에 resize 속성을 이용하여 크기 조절

--- a/2022/09.md
+++ b/2022/09.md
@@ -3,6 +3,42 @@
 1. `Webpack` 에서 `Babel-loader` 사용하여 빌드시 `regenerator-runtime` 관련 오류가 발생하는 경우가 있다.
 이는 `async, await` 사용시 core.js 로 변환하지 못하여 발생하는 오류로 `npm install regenerator-runtime` 을 설치해주면 된다.
 
+2. css 에 `resize` 속성을 이용하여 크기 조절을 할 수 있다.
+`overflow` 를 `auto` 로 준 뒤, `resize` 속성을 걸어줍니다.
+```html
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+	<meta charset="UTF-8">
+	<title>CSS3 User Interface</title>
+	<style>
+		div {
+			border: 3px solid orange;
+			margin: 10px;
+			padding: 20px;
+			width: 300px;
+			overflow: auto;
+		}
+		#width { resize: horizontal; }
+		#height { resize: vertical; }
+		#both { resize: both; }
+	</style>
+</head>
+
+<body>
+
+	<h1>resize 속성을 이용한 크기 조절</h1>
+	<p>각 div 요소의 오른쪽 하단에 있는 크기 조절 핸들을 마우스로 드래그해서 요소의 크기를 조절할 수 있습니다.</p>
+	<div id="width">이 요소는 너비만 조절할 수 있어요!</div>
+	<div id="height">이 요소는 높이만 조절할 수 있어요!</div>
+	<div id="both">이 요소는 둘 다 조절할 수 있어요!</div>
+
+</body>
+
+</html>
+```
+
 ## 2022-09-14
 
 1. Babel End
