SSL_ERROR_BAD_CERT_DOMAIN는 인증서 관련 문제

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,8 @@
+## 2022-09-16
+
+1. `SSL_ERROR_BAD_CERT_DOMAIN` 문제는 https 로 접속시 발생하며, 잘못된 인증서로 인한 문제입니다.
+인증서를 발급받아 해당 도메인을 허용해주어야 하는 문제입니다.
+
 ## 2022-09-15
 
 1. `Webpack` 에서 `Babel-loader` 사용하여 빌드시 `regenerator-runtime` 관련 오류가 발생하는 경우가 있다.
