Cannot install under Rosetta 2 in ARM default prefix (/opt/homebrew)! 오류 해결방법

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,7 @@
+## 2022-09-18
+
+1. `brew install <package>` 시 `Cannot install under Rosetta 2 in ARM default prefix (/opt/homebrew)!` 다음과 같은 오류가 발생하면 `arch -arm64 brew install <package>` 로 설치하면 됨.
+
 ## 2022-09-16
 
 1. `SSL_ERROR_BAD_CERT_DOMAIN` 문제는 https 로 접속시 발생하며, 잘못된 인증서로 인한 문제입니다.
