husky, llint-staged 사용

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,6 +1,8 @@
 ## 2022-09-18
 
 1. `brew install <package>` 시 `Cannot install under Rosetta 2 in ARM default prefix (/opt/homebrew)!` 다음과 같은 오류가 발생하면 `arch -arm64 brew install <package>` 로 설치하면 됨.
+2. `husky` 를 사용해서 깃 커밋시에 자동으로 eslint 를 설정할 수 있음.
+`lint-staged` 를 추가하여 변경된 파일만 검사할 수 있음.
 
 ## 2022-09-16
 
