Cannot find module 'webpack-cli/bin/config-yargs' 해결 방법

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,8 @@
+## 2022-09-21
+
+1. `Cannot find module 'webpack-cli/bin/config-yargs'` 해당 오류는 webpack-dev-server 와 webpack, webpack-cli 버전이 맞지 않아 발생하는 문제입니다.
+나는 webpack@4 를 사용함으로 webpack-cli 버전을 3.3.10 으로 변경하여 사용.
+
 ## 2022-09-18
 
 1. `brew install <package>` 시 `Cannot install under Rosetta 2 in ARM default prefix (/opt/homebrew)!` 다음과 같은 오류가 발생하면 `arch -arm64 brew install <package>` 로 설치하면 됨.
