--- a/2022/09.md
+++ b/2022/09.md
@@ -2,6 +2,18 @@
 
 1. `Cannot find module 'webpack-cli/bin/config-yargs'` 해당 오류는 webpack-dev-server 와 webpack, webpack-cli 버전이 맞지 않아 발생하는 문제입니다.
 나는 webpack@4 를 사용함으로 webpack-cli 버전을 3.3.10 으로 변경하여 사용.
+2. `Delete `␍` prettier/prettier 해결 방법` 아래와 같이 설정
+
+```json
+  rules: {
+    "prettier/prettier": [
+      "error",
+      {
+        endOfLine: "auto",
+      },
+    ],
+  },
+```
 
 ## 2022-09-18
 
