webpack 에서 핫로딩 사용

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,31 @@
+## 2022-09-22
+
+1. webpack 핫로딩은 전체 페이지가 아닌, 변경한 모듈만 바꿔치기 하는 방법으로 SPA 에서 사용하는 방법이라고 생각하면 됨. react, vue 에서도 핫모듈을 사용하는 방법을 사용하는 것들이 있음.
+webpack.config.js 에서 devServer 에 hot 을 true 로 추가.
+
+```js
+  devServer = {
+    hot: true,
+  },
+```
+
+`app.js` 에서 아래와 같이 `module` 을 셋팅하면 `result` 모듈이 변경시에는 `"result 모듈 변경 됨"` 이나오고 `form` 모듈 변경시에는 나오지 않는 것을 볼 수 있음.
+
+```js
+if (module.hot) {
+  console.log("핫 모듈 켜짐");
+
+  module.hot.accept("./result", async () => {
+    console.log("result 모듈 변경 됨");
+    resultEl.innerHTML = await result.render();
+  });
+
+  module.hot.accept("./form", () => {
+    formEl.innerHTML = form.render();
+  });
+}
+```
+
 ## 2022-09-21
 
 1. `Cannot find module 'webpack-cli/bin/config-yargs'` 해당 오류는 webpack-dev-server 와 webpack, webpack-cli 버전이 맞지 않아 발생하는 문제입니다.
