--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,17 @@
+## 2022-09-23
+
+1. html 아스키 코드 문자열이 넘어와 파싱관련 문제가 발생하였는데, 아래 함수를 추가하여 처리할 수 있었음.
+
+아래 함수를 사용해서 Html 아스키 코드 문자열을 디코딩 하는 함수. 
+
+```js
+  function decodeHtmlCharCodes(str) {
+    return str.replace(/(&#(\d+);)/g, function(match, capture, charCode) {
+      return String.fromCharCode(charCode);
+    });
+  }
+```
+
 ## 2022-09-22
 
 1. webpack 핫로딩은 전체 페이지가 아닌, 변경한 모듈만 바꿔치기 하는 방법으로 SPA 에서 사용하는 방법이라고 생각하면 됨. react, vue 에서도 핫모듈을 사용하는 방법을 사용하는 것들이 있음.
