--- a/2022/09.md
+++ b/2022/09.md
@@ -1,8 +1,8 @@
 ## 2022-09-23
 
-1. html 아스키 코드 문자열이 넘어와 파싱관련 문제가 발생하였는데, 아래 함수를 추가하여 처리할 수 있었음.
+1. html 특수 문자(아스키 코드) 문자열이 넘어와 파싱관련 문제가 발생하였는데, 아래 함수를 추가하여 처리할 수 있었음.
 
-아래 함수를 사용해서 Html 아스키 코드 문자열을 디코딩 하는 함수. 
+아래 함수를 사용해서 Html 특수문자 관련 아스키 코드 문자열을 디코딩 하는 함수. 
 
 ```js
   function decodeHtmlCharCodes(str) {
