--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,19 @@
+## 2022-09-25
+
+1. 환경변수 값을 주어 빌드 할시 OS 마다 환경변수를 설정하는 방법이 달라서 오류가 나는 경우가 발생한다.
+예를 들어, `build: "NODE_ENV=production webpack --progress"` 를 사용하는 경우, Mac 에서는 되지만, Windows 에서는 에러가 나는 것을 확인하였다. 이를 해결하기 위해 cross-env 모듈을 사용하였다.
+
+```cmd
+npm install cross-env
+```
+
+앞에 cross-env 키워드를 붙여 사용해주면 동적으로 환경 변수가 변경되며 모든 운영체제에서 동일한 방법으로 환경 변수를 변경할 수 있다.
+
+```json
+build: "cross-env NODE_ENV=production webpack --progress"
+```
+
+
 ## 2022-09-23
 
 1. html 특수 문자(아스키 코드) 문자열이 넘어와 파싱관련 문제가 발생하였는데, 아래 함수를 추가하여 처리할 수 있었음.
