타입스크립트 eslint 파서 버그, poi, jszip 전문 데이터 다름

--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,20 @@
+## 2022-09-27
+
+1. 타입스크립트에서 `eslint` 사용시 `Parsing error: Cannot read properties of undefined (reading 'map')eslint` 다음과 같은 오류가 발생하는 경우가 있다.
+이는 타입스크립트 버전과 eslint 파서 관련 버전 문제로 인한 버그이다.
+
+아래의 dependencies 를 추가해준다. 타입스크립트 버전에 맞게끔 버전을 수정해주어야한다. 아래는 `TypeScript 4.1.5` 이다.
+```json
+"devDependencies": {
+  "@typescript-eslint/eslint-plugin": "^4.18.0",
+  "@typescript-eslint/parser": "^4.18.0",
+}
+```
+
+2. poi 를 사용한 엑셀 다운로드의 데이터 전문과 jszip 을 이용하여 다운로드한 데이터 전문이 서로 다른 경우가 있다. 
+이는 텍스트에 태그가 약간 다른 문제인데, poi 의 경우, `<is><t>텍스트</t></is>` 이고 jszip 의 경우, `<v>텍스트</v>` 이런 느낌으로 태그가 생성된다.
+엑셀 전문 데이터를 자를 때 `type === "inlineStr" ? valXml.match(/<is><t>([\s\S]*?)<\/t><\/is>/) : valXml.match(/<v>([\s\S]*?)<\/v>/);` 다음 처럼 사용하면 될 것으로 보인다.
+
 ## 2022-09-25
 
 1. 환경변수 값을 주어 빌드 할시 OS 마다 환경변수를 설정하는 방법이 달라서 오류가 나는 경우가 발생한다.
