--- a/2022/09.md
+++ b/2022/09.md
@@ -1,3 +1,8 @@
+## 2022-09-30
+
+1. vue 에서 eslint 끄는 방법
+vue.config.js 를 만들어서 `lintOnSave: false` 를 설정해주면 됩니다.
+
 ## 2022-09-27
 
 1. 타입스크립트에서 `eslint` 사용시 `Parsing error: Cannot read properties of undefined (reading 'map')eslint` 다음과 같은 오류가 발생하는 경우가 있다.
