--- a/2022/09.md
+++ b/2022/09.md
@@ -1,7 +1,7 @@
 ## 2022-09-30
 
-1. vue 에서 eslint 끄는 방법
-vue.config.js 를 만들어서 `lintOnSave: false` 를 설정해주면 됩니다.
+1. vue 에서 eslint 끄는 방법 <br/>
+`vue.config.js` 를 만들어서 `lintOnSave: false` 를 설정해주면 됩니다.
 
 ## 2022-09-27
 
