{ parser: "babylon" } is deprecated; we now treat it as { parser: "babel" } 해결방법

--- a/2022/09.md
+++ b/2022/09.md
@@ -9,6 +9,9 @@
 vue create webpack-simple vue-todo
 ```
 
+3. vue 빌드시 `{ parser: "babylon" } is deprecated; we now treat it as { parser: "babel" }.` 다음과 같은 오류 발생시
+`node_modules/vue-loader/lib/template-compiler/index.js` 로 가서 `babylon => babel` 로 변경해주면 된다.
+
 ## 2022-09-27
 
 1. 타입스크립트에서 `eslint` 사용시 `Parsing error: Cannot read properties of undefined (reading 'map')eslint` 다음과 같은 오류가 발생하는 경우가 있다.
