vetur 사용시 vue 기본 템플릿 만들기

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,4 @@
 ## 2022-10-03
 
 1. vscode 에서 powermode 확장앱 사용시 화면 흔들림이 있는 효과가 있는데 settings 에서 enableShake 라는 것을 꺼주면 됨.
+2. vetur 라는 확장팩을 다운받아서 default.vue 라는 키워드로 vue 의 템플릿 구조를 만들 수 있음. (꿀~)
