반응형 웹 태그 추가

--- a/2022/10.md
+++ b/2022/10.md
@@ -2,3 +2,10 @@
 
 1. vscode 에서 powermode 확장앱 사용시 화면 흔들림이 있는 효과가 있는데 settings 에서 enableShake 라는 것을 꺼주면 됨.
 2. vetur 라는 확장팩을 다운받아서 default.vue 라는 키워드로 vue 의 템플릿 구조를 만들 수 있음. (꿀~)
+3. 뷰포트 메타 태그는 브라우저가 웹 페이지를 렌더링 할 때 동작하는 방법을 알려주고 뷰포트의 크기를 알 수 있습니다. 
+반응형 웹 태그를 추가하여 이 뷰가 반응형 웹 뷰포트라는 것을 알려준다.
+
+반응형 웹 태그
+```html
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+```
