--- a/2022/10.md
+++ b/2022/10.md
@@ -9,3 +9,4 @@
 ```html
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 ```
+4. vue style 사용시 style scoped 속성을 사용하여 css 유효성 범위를 설정할 수 있음.
