base64 인코딩, 디코딩 관련 함수사용

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,8 @@
+## 2022-10-04
+
+1. 엑셀 전문 데이터를 파싱하여 base64 로 변환하기 위한 작업을 했다. 
+base64 로 인코딩하기 위해서는 btoa(), 디코딩하기 위해서는 atob() 를 사용한다. 보통 문자열(바이너리)로 들어오면 바꿔주면 된다.
+
 ## 2022-10-03
 
 1. vscode 에서 powermode 확장앱 사용시 화면 흔들림이 있는 효과가 있는데 settings 에서 enableShake 라는 것을 꺼주면 됨.
