--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,21 @@
+## 2022-10-05
+
+1. 자바스크립트에서 blob(바이너리 라지 오브젝트) 객체를 이용하여 이미지, 파일 등의 데이터를 만질 수 있습니다.
+png 파일을 blob 을 이용하여 객체를 만든 뒤, `URL.createObjectURL` 을 이용하여 url 을 만들어 해결했습니다.
+
+blob 으로 만든 url 은 브라우저 해제시까지 유지되며 해제시에는 삭제됩니다. 올...
+
+다음과 같이 사용할 수 있습니다.
+```js
+const blob = new Blob (array, {type: image/png});
+const url = URL.createObjectURL(blob);
+
+console.log(url); // blob:뭐시기....
+
+body.innerHTML = `<img src = ${url}>`;
+
+```
+
 ## 2022-10-04
 
 1. 엑셀 전문 데이터를 파싱하여 base64 로 변환하기 위한 작업을 했다. 
