zipFiles 에서 꺼내온 이미지를 blob 처리하는 로직추가

--- a/2022/10.md
+++ b/2022/10.md
@@ -13,7 +13,43 @@ const url = URL.createObjectURL(blob);
 console.log(url); // blob:뭐시기....
 
 body.innerHTML = `<img src = ${url}>`;
+```
 
+아래는 그를 이용해, zipFiles 에서 꺼내온 이미지를 blob 처리하는 로직입니다.
+```js
+if (zip.loadAsync) {
+    zip.loadAsync(xlsxFile)
+    .then(readZipContent)
+    .then(function(zipFiles) {
+      var data = {};
+      var re = /(.jpg|.png|.gif|.ps|.jpeg)$/;
+      var promises = Object.keys(zip.files).filter(function (fileName) {
+        return re.test(fileName.toLowerCase());
+      }).map(function (fileName) {
+        var file = zip.files[fileName];
+        return file.async("blob").then(function (blob) {
+          var obj = {};
+          obj[fileName] = URL.createObjectURL(blob);
+          return obj;
+        });
+      });
+
+      // 순차적으로 처리하도록 합니다.
+      Promise.all(promises).then(function (values) {
+        for (var i = 0; i < zipFiles.length; i++)
+          data[zipFiles[i].file] = zipFiles[i].data;
+
+        data.images = values;
+        cb(data);
+      });
+    })
+    .then(undefined, function(err) {
+      console.log('zip.loadAsync failed:', err);
+      cb({
+        error: err
+      });
+    });
+}
 ```
 
 ## 2022-10-04
