input number 스피너 없애기

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,14 @@
+## 2022-10-11
+
+1. input number 를 사용하는 경우, 스피너 없애는 방법. 파이어폭스만 좀 다른데, 크로스 브라우징을 어느정도 제공해줘야 하니 다음 css 를 추가하도록 함.
+
+```css
+/* 크롬, 엣지, 사파리, 오페라 */
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
+/* 파이어 폭스 */
+input[type=number] { -moz-appearance: textfield; }
+```
+
 ## 2022-10-09
 
 1. vue 생명주기 관련 공부
