--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,27 @@
+## 2022-10-12
+
+- VSCode에서 디버깅을 사용하기 위해서는 `launch.json` 파일이 필요 (없으면, `Run and Debug` 탭으로 이동하여 `create a launch.json.file` 을 눌러 만들 수 있음.)
+- 프론트 개발환경에서는 일반적으로 브라우저의 개발자 도구를 이용하지만, 백엔드 개발, 환경 셋팅시에는 해당 기능을 이용하면 좋음.
+- Node.js 디버깅을 위한 기본파일은 아래와 같음
+```json
+{
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${file}"
+    }
+  ]
+}
+```
+- 위와 같이 설정한 후 Run을 실행하려하면 `package.json`에 설정된 명령어를 선택하여 실행할 수 있음
+- 이후 디버깅 방식은 다른 IDE와 비슷
+
 ## 2022-10-11
 
 1. input number 를 사용하는 경우, 스피너 없애는 방법. 파이어폭스만 좀 다른데, 크로스 브라우징을 어느정도 제공해줘야 하니 다음 css 를 추가하도록 함.
