svelte 시작(?) 은 아님..

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,8 @@
+## 2022-10-15
+
+- svelte 프레임워크는 현재 react, vue 의 뒤를 이을까 말까 하는 프레임워크이다. 리액트는 라이브러리 쪽이 더 가까움.
+- 아직 거대한 시장은 없지만, 미래에는 뜨지 않을까...(확실히 더 직관적이고 편해지는 것 같음.) 정말 미래에는 react, vue, svelte 가 지배하지 않을까 하고 있다.
+
 ## 2022-10-12
 
 - VSCode에서 디버깅을 사용하기 위해서는 `launch.json` 파일이 필요 (없으면, `Run and Debug` 탭으로 이동하여 `create a launch.json.file` 을 눌러 만들 수 있음.)
