간단한 컴포넌트 설계 기법 공부

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,8 @@
+## 2022-10-16
+
+- 컴포넌트 설계 기법에는 여러개가 있음. 오늘 공부한 것은 중앙관리식 설계 기법
+- 재사용하기 위해서 상위 컴포넌트에 정의 후, 하위 컴포넌트로 전달하여 처리하도록 함. (재사용성이 올라가고 데이터의 복잡성이 줄어들음.)
+
 ## 2022-10-15
 
 - svelte 프레임워크는 현재 react, vue 의 뒤를 이을까 말까 하는 프레임워크이다. 리액트는 라이브러리 쪽이 더 가까움.
