뷰에서는 애니메이션, 트렌지션을 코어에서 지원해줌.

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,7 +1,10 @@
 ## 2022-10-16
 
+1. 컴포넌트 설계 기법1
 - 컴포넌트 설계 기법에는 여러개가 있음. 오늘 공부한 것은 중앙관리식 설계 기법
 - 재사용하기 위해서 상위 컴포넌트에 정의 후, 하위 컴포넌트로 전달하여 처리하도록 함. (재사용성이 올라가고 데이터의 복잡성이 줄어들음.)
+
+2. 뷰에서는 애니메이션, 트렌지션을 코어 내부 라이브러리에서 직접 지원해줌.
 
 ## 2022-10-15
 
