--- a/2022/10.md
+++ b/2022/10.md
@@ -6,6 +6,30 @@
 
 2. 뷰에서는 애니메이션, 트렌지션을 코어 내부 라이브러리에서 직접 지원해줌.
 
+3. slot 사용
+뷰에서 제공하는 기능으로 컴포넌트 사이에 들어갈 요소를 재정의 할 수 있음.
+
+```html
+<!--ex1.html-->
+<div class="modal-header">
+  <slot name="header">default header</slot>
+</div>
+
+<div class="modal-body">
+  <slot name="body">default body</slot>
+</div>
+
+
+<!--ex2.html-->
+<h3 slot="header">custom header</h3>
+<!-- 위 아래는 같은 것 -->
+<template #body>
+  <h3>custom body</h3>
+</template>
+```
+
+
+
 ## 2022-10-15
 
 - svelte 프레임워크는 현재 react, vue 의 뒤를 이을까 말까 하는 프레임워크이다. 리액트는 라이브러리 쪽이 더 가까움.
