간단한 트랜지션 예제

--- a/2022/10.md
+++ b/2022/10.md
@@ -6,6 +6,16 @@
 
 2. 뷰에서는 애니메이션, 트렌지션을 코어 내부 라이브러리에서 직접 지원해줌.
 
+list 라는 내부 트랜지션클래스를 가진 트랜지션, 태그는 ul 을 사용함.
+```html
+<transition-group name="list" tag="ul">
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+  <li>4</li>
+</transition-group>
+```
+
 3. slot 사용
 뷰에서 제공하는 기능으로 컴포넌트 사이에 들어갈 요소를 재정의 할 수 있음.
 
