호이스팅 복습 ~.~! (함수 선언과 표현의 차이)

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,31 @@
+## 2022-10-17
+
+간만에 호이스팅 복습할 시간이 생겨 복습하면서 노트함.
+
+1. es5 특징에는 호이스팅이 있는데, 함수 선언식과 변수가 맨 위에 있는 것으로 인식됨. 함수 표현식은 해당되지 않음.
+```js
+function test () {
+  // 함수 선언식 (애는 호이스팅)
+  ...
+}
+
+var test = function () {
+  // 함수 표현식 (애는 호이스팅x)
+  ...
+}
+```
+2. 선언이 맨위로 끌어 올려지고 연산은 그 후에 일어남. 그러다 보니... 아래와 같은 문제가 발생.
+```js
+var sum = 0;
+sum += i;
+
+var i = 10;
+```
+
+위의 로직을 실행 하면 오류는 발생하지 않음. 하지만, sum 을 확인해보면 `NaN` 이 나옴.
+오류가 나지 않는 이유는 호이스팅으로 인해 `var i` 가 맨 위로 끌어 올려져서 그럼.
+
+
 ## 2022-10-16
 
 1. 컴포넌트 설계 기법1
