es5 => es6 함수 리터럴 방식이 간편화됨. (복습)

--- a/2022/10.md
+++ b/2022/10.md
@@ -25,6 +25,24 @@ var i = 10;
 위의 로직을 실행 하면 오류는 발생하지 않음. 하지만, sum 을 확인해보면 `NaN` 이 나옴.
 오류가 나지 않는 이유는 호이스팅으로 인해 `var i` 가 맨 위로 끌어 올려져서 그럼.
 
+3. 함수 리터럴 es6
+
+es5 => es6 함수 리터럴 방식이 간편화됨. (복습)
+
+```js
+const obj = {
+  // es5
+  funA: function () {
+    ...
+  },
+  // es6
+  funB() {
+    ...
+  }
+}
+
+```
+
 
 ## 2022-10-16
 
