자동완성 검색기능

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,8 @@
+## 2022-10-19
+
+`jquery autocomplete` 라는 이제 자동완성형 검색을 할 수 있는 기능과 비슷하게 만들기위해 `debounce` 를 사용하여 처리해주어야함.
+검색 할 때마다 서버로 호출하여야 하기 때문에 검색시 목록의 수를 제한을 두어야함. (대용량처리가 가능해짐.)
+
 ## 2022-10-17
 
 간만에 호이스팅 복습할 시간이 생겨 복습하면서 노트함.
