Vuex 간단 개념 정리

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,7 +1,30 @@
 ## 2022-10-19
 
-`jquery autocomplete` 라는 이제 자동완성형 검색을 할 수 있는 기능과 비슷하게 만들기위해 `debounce` 를 사용하여 처리해주어야함.
+1. `jquery autocomplete` 라는 이제 자동완성형 검색을 할 수 있는 기능과 비슷하게 만들기위해 `debounce` 를 사용하여 처리해주어야함.
 검색 할 때마다 서버로 호출하여야 하기 때문에 검색시 목록의 수를 제한을 두어야함. (대용량처리가 가능해짐.)
+
+2. `Vuex` 란?
+
+- 무수히 많은 컴포넌트의 데이터를 관리하기 위한 상태 관리 패턴이자 라이브러리
+
+3. `Flux` 란?
+
+- MVC 패턴의 복잡한 데이터 흐름 문제를 해결하는 개발 패턴
+- `Action -> Dispatcher -> Model -> View` (단방향 데이터 흐름을 가지고 있음.)
+- `MVC` 패턴의 문제점으로 데이트 흐름이 여러 방향으로 기능 추가 및 변경시 앱이 복잡해지면서 생기는 업데이트를 예측할 수 없음.
+
+4. `Vuex` 를 사용하는 이유는?
+
+- 컴포넌트 갯수가 많아질수록, 컴포넌트 간의 파라미터를 통한 데이터 전달이 어렵다.
+- MVC 패턴에서 발생하는 구조적 오류 해결 (`vuex` 도 단방향)
+- 여러 개의 컴포넌트에서 같은 데이터를 통한 업데이트시 동기화 문제 (`mutation, actions`)
+
+5. `Vue` 컨셉 및 구조
+
+- State: 컴포넌트 간의 공유하는 데이터 `data`
+- View: 데이터를 표시하는 화면 `template`
+- Action: 사용자의 입력에 따라 데이터를 변경하는 `methods`
+- 구조: `컴포넌트 -> 비동기 로직(Actions) -> 동기 로직(Mutations) -> 상태(State)`
 
 ## 2022-10-17
 
