vuex 에서 mutations 관련 내용 추가

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,7 @@
+## 2022-10-21
+
+1. vuex 에서 mutations 은 state 를 변경할 수 있는 메서드로 this.$store.commit(함수명, 인자) 로 동작시킬 수 있음. 받을 때는 함수명 (state, 인자) 로 받아서 내부에서 state 도 조작할 수 있음.
+
 ## 2022-10-19
 
 1. `jquery autocomplete` 라는 이제 자동완성형 검색을 할 수 있는 기능과 비슷하게 만들기위해 `debounce` 를 사용하여 처리해주어야함.
