mutation, actions 의 규격화 설명

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,41 @@
+## 2022-10-23
+
+1. state 는 왜 직접 변경하지 않고 mutations 로 변경할까? (꼭 써야한다고 생각하면 됨.)
+
+- 여러 개의 컴포넌트에서 state 를 변경하는 경우 어느 컴포넌트에서 변경했는지 알 수가 없음.
+- mutation 을 이용해서 state 변경시 반응성, 디버깅 등을 좀 더 쉽게 볼 수 있음.
+
+2. actions 란?
+
+- 비동기 로직을 선언하는 메서드. 비동기 로직을 담당하는 mutations.
+- 데이터 요청, Promise, async 와 같은 비동기 로직은 모두 actions 에 선언
+- dispatch 를 이용하여 actions 를 실행함.
+
+```js
+// 예시
+// store.js
+state: {
+  num: 10
+},
+mutations: {
+  doubleNumber(state) {
+    state.num * 2;
+  }
+},
+actions: {
+  delayDoubleNumber(context) {
+    setTimeout(() => context.commit('doubleNumber'), 2000)
+  }
+}
+
+// App.vue
+this.$store.dispatch('delayDoubleNumber');
+```
+
+3. 왜 비동기 로직 처리는 actions 에 선언해야 할까?
+
+- 어느 컴포넌트에서 state 를 호출하고 변경했는지 알기 위해서 그렇기 때문에 mutation 에는 동기로직이 오고 actions 에서는 비동기로직이 와야함.(규격화)
+
 ## 2022-10-21
 
 1. vuex 에서 mutations 은 state 를 변경할 수 있는 메서드로 this.$store.commit(함수명, 인자) 로 동작시킬 수 있음. 받을 때는 함수명 (state, 인자) 로 받아서 내부에서 state 도 조작할 수 있음.
