정규표현식 연습사이트 및 간단한 예제

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,15 @@
+## 2022-10-24
+
+1. https://regexr.com/ 정규표현식 연습 사이트로써 여러가지 테스트시에 위의 사이트를 가서 하면 됨.
+
+```js
+var str = `안녕하세요.
+책 이름 : 나는 땡땡 입니다.
+나는 땡땡입니다.`
+
+str.match(/책 이름 : [a-zA-Z0-9가-힣ㄱ-ㅎ\s]+./g)[0].split("책 이름 :")[1].trim(); // 나는 땡땡 입니다.
+```
+
 ## 2022-10-23
 
 1. state 는 왜 직접 변경하지 않고 mutations 로 변경할까? (꼭 써야한다고 생각하면 됨.)
