input 에 한글입력관련 문제 수정

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,8 @@
+## 2022-10-26
+
+1. input 에 한글입력 후, 콘솔로 빈값을 주어도 한글이 남아있는 문제가 발생. 자바스크립와 한국어 관련 버그로 생각됨.. 한국어 조합이 완성되지 않은 상태에서는 일어날 수 있는듯.. <br/>
+그래서 input 창을 지웠다가 다시 만드는 방법으로 해결함..
+
 ## 2022-10-24
 
 1. https://regexr.com/ 정규표현식 연습 사이트로써 여러가지 테스트시에 위의 사이트를 가서 하면 됨.
