vuex 에서 mapState, mapGetters 관련 내용 추가

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,56 @@
+## 2022-10-28
+
+1. **mapState**: `vuex` 에 선언한 `state` 속성을 뷰 컴포넌트에 더 쉽게 연결해주는 헬퍼
+```js
+import { mapState } from 'vuex'
+
+computed() {
+	...mapState(['num'])
+	// num() { return this.$store.state.num; }
+}
+
+// store.js
+state: {
+	num: 10
+}
+
+// 아래와 같이 사용가능.
+// {{ this.$store.state.num }}
+{{ this.num }}
+```
+2. **mapGetters**: `vuex` 에 선언한 `getters` 속성을 뷰 컴포넌트에 더 쉽게 연결해주는 헬퍼
+
+```js
+import { mapState } from 'vuex'
+
+computed() {
+	...mapState(['num'])
+	// num() { return this.$store.state.num; }
+}
+
+// store.js
+state: {
+	num: 10
+}
+
+// 아래와 같이 사용가능.
+// {{ this.$store.state.num }}
+{{ this.num }}
+```
+
+**mapGetters** 를 배열이 아닌, 객체로 사용하는 경우는 이름을 새롭게 매핑해줌. (store 에 있는 것과 컴포넌트에서 쓰는 속성이 이름이 다른 경우 사용.)
+```js
+...mapGetters(['storedTodoItems'])
+
+...mapGetters({
+	todoItems: 'storedTodoItems'
+})
+```
+
+3. **...** 은 `Object Spread Operator` 로써 객체 끼리 속성을 합칠 때 사용됨.
+
+
+
 ## 2022-10-26
 
 1. input 에 한글입력 후, 콘솔로 빈값을 주어도 한글이 남아있는 문제가 발생. 자바스크립와 한국어 관련 버그로 생각됨.. 한국어 조합이 완성되지 않은 상태에서는 일어날 수 있는듯.. <br/>
