mapActions, mapMutations 추가

--- a/2022/10.md
+++ b/2022/10.md
@@ -48,8 +48,65 @@ state: {
 ```
 
 3. **...** 은 `Object Spread Operator` 로써 객체 끼리 속성을 합칠 때 사용됨.
+4. **mapMutations**: vuex 에 선언한 mutations 속성을 뷰 컴포넌트에 더 쉽게 연결해주는 헬퍼
+
+```js
+import { mapMutations } from 'vuex'
+
+methods: {
+	...mapMutations(['clickBtn']),
+	authLogin() {},
+	displayTable() {}
+}
+
+// store.js
+mutations: {
+	clickBtn(state) {
+		alert(state.msg);
+	}
+}
 
 
+// <button @click="clickBtn">message</button>
+```
+5. **mapActions**: vuex 에 선언한 actions 속성을 뷰 컴포넌트에 더 쉽게 연결해주는 헬퍼
+
+```js
+import { mapActions } from 'vuex'
+
+methods: {
+	...mapActions(['delayClickBtn'])
+}
+
+// store.js
+actions: {
+	delayClickBtn(context) {
+		setTimeout(() => context.commit('clickBtn'), 2000);
+	}
+}
+
+// <button @click="delayClickBtn">message</button>
+```
+
+6. 헬퍼의 유연한 문법
+
+vuex 에 선언한 속성을 그대로 컴포넌트에 연결하는 문법
+
+```js
+// 배열 리터럴
+...mapMutations([
+	'clickBtn',
+	'addNumber' // addNumber(인자), 인자를 안써줘도 저절로 넘어감.
+])
+```
+
+vuex 에 선언한 속성을 컴포넌트의 특정 메서드에다가 연결하는 문법
+
+```js
+...mapMutations({
+	popupMsg: 'clickBtn' // 컴포넌트 메서드 명: store의 뮤테이션 명
+})
+```
 
 ## 2022-10-26
 
