--- a/2022/10.md
+++ b/2022/10.md
@@ -108,6 +108,9 @@ vuex 에 선언한 속성을 컴포넌트의 특정 메서드에다가 연결하
 })
 ```
 
+7. vscode extensions 중 하나인 vue vscode snippets 로 뷰 스니펫을 추가하여 자동완성을 쓸 수 있음.
+vetur 와 같이 쓰면 좋은듯~?
+
 ## 2022-10-26
 
 1. input 에 한글입력 후, 콘솔로 빈값을 주어도 한글이 남아있는 문제가 발생. 자바스크립와 한국어 관련 버그로 생각됨.. 한국어 조합이 완성되지 않은 상태에서는 일어날 수 있는듯.. <br/>
