--- a/2022/10.md
+++ b/2022/10.md
@@ -111,6 +111,75 @@ vuex 에 선언한 속성을 컴포넌트의 특정 메서드에다가 연결하
 7. vscode extensions 중 하나인 vue vscode snippets 로 뷰 스니펫을 추가하여 자동완성을 쓸 수 있음.
 vetur 와 같이 쓰면 좋은듯~?
 
+8. store 의 경우, 너무 많을 수 있으니 modules 를 사용하여 모듈화 하는 방법이 있음.
+
+```js
+// todo.js
+const storage = {
+  fetch() {
+    const arr = [];
+    if (localStorage.length > 0) {
+      for (let i = 0; i < localStorage.length; i++) {
+        if (localStorage.key(i) !== 'loglevel:webpack-dev-server') {
+          arr.push(JSON.parse(localStorage.getItem(localStorage.key(i))));
+        }
+      }
+    }
+    return arr;
+  }
+};
+
+const state = {
+  headerText: "Todo it!",
+  footerText: "Foot Message!",
+  todoItems: storage.fetch()
+};
+
+const getters = {
+  storedTodoItems(state) {
+    return state.todoItems;
+  },
+  storedFooterText(state) {
+    return state.footerText;
+  },
+  storedHeaderText(state) {
+    return state.headerText;
+  }
+}
+
+const mutations = {
+  addOneItem(state, todoItem) {
+    const obj = {completed: false, item: todoItem};
+    localStorage.setItem(todoItem, JSON.stringify(obj));
+    state.todoItems.push(obj);
+  },
+  removeOneItem(state, payload) {
+    localStorage.removeItem(payload.todoItem.item);
+    state.todoItems.splice(payload.index, 1);
+  },
+  toggleOneItem(state, payload) {
+    state.todoItems[payload.index].completed = !state.todoItems[payload.index].completed;
+    localStorage.removeItem(payload.todoItem.item);
+    localStorage.setItem(payload.todoItem.item, JSON.stringify(payload.todoItem));
+  },
+  clearAllItem(state) {
+    localStorage.clear();
+    state.todoItems = [];
+  }
+}
+
+export default { state, getters, mutations }
+
+// store.js
+import todoApp from './modules/todoApp'
+
+export const store = new Vuex.Store({
+  modules: {
+    todoApp: todoApp
+  }
+});
+```
+
 ## 2022-10-26
 
 1. input 에 한글입력 후, 콘솔로 빈값을 주어도 한글이 남아있는 문제가 발생. 자바스크립와 한국어 관련 버그로 생각됨.. 한국어 조합이 완성되지 않은 상태에서는 일어날 수 있는듯.. <br/>
