vue 코드 스타일 표준

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,7 @@
+## 2022-10-29
+
+1. Vue.js 는 `Style Guide` 가 있어서 코드 표준을 여기서 맞추면 될 것으로 보임. 
+
 ## 2022-10-28
 
 1. **mapState**: `vuex` 에 선언한 `state` 속성을 뷰 컴포넌트에 더 쉽게 연결해주는 헬퍼
