--- a/2022/10.md
+++ b/2022/10.md
@@ -1,8 +1,15 @@
 ## 2022-10-29
 
 1. Vue.js 는 `Style Guide` 가 있어서 코드 표준을 여기서 맞추면 될 것으로 보임. 
-2. 자바스크립트에 주석을 /**/ 로 달면, 자바스크립트 소스에 주석이 힌트로 등장합니다. 요것을 jsdoc 이라고 부릅니다.
+2. 자바스크립트에 주석을 /** */ 로 달면, 자바스크립트 소스에 주석이 힌트로 등장합니다. 요것을 jsdoc 이라고 부릅니다.
 숙련된 개발자처럼 보임. (코딩애플님 왈...)
+
+```js
+/**
+ * 테스트용 
+ */
+function test () {}
+```
 
 ## 2022-10-28
 
