vue 버전관련하여 vue-router 버전적용

--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,7 @@
+## 2022-10-30
+
+1. vue2 를 사용하는 경우, vue-router는 3버전, vue3 을 사용하는 경우, vue-router 는 4버전을 사용해야한다...
+
 ## 2022-10-29
 
 1. Vue.js 는 `Style Guide` 가 있어서 코드 표준을 여기서 맞추면 될 것으로 보임. 
