--- a/2022/10.md
+++ b/2022/10.md
@@ -1,3 +1,38 @@
+## 2022-10-31
+
+1. vue 에서 api 관리하는 방법으로 아래와 같이 src/api 폴더를 만들어서 관리합니다.
+
+```js
+// axios 를 이용한 간단한 search 를 요청하는 파일
+
+import axios from 'axios';
+
+// Http Request & Response 와 관련된 기본 설정
+const config = {
+  baseUrl: 'https://api.hnpwa.com/v0/'
+}
+
+// API 함수들을 정리 (아래와 같이 return 을 쳐줘야 .then, .catch 로 받아서 사용할 수 있음.)
+function fetchNewsList() {
+  // return axios.get(config.baseUrl + 'news/1.json');
+  return axios.get(`${config.baseUrl}news/1.json`);
+}
+
+function fetchAskList() {
+  return axios.get(`${config.baseUrl}ask/1.json`);
+}
+
+function fetchJobsList() {
+  return axios.get(`${config.baseUrl}jobs/1.json`);
+}
+
+export {
+  fetchNewsList,
+  fetchAskList,
+  fetchJobsList
+}
+```
+
 ## 2022-10-30
 
 1. vue2 를 사용하는 경우, vue-router는 3버전, vue3 을 사용하는 경우, vue-router 는 4버전을 사용해야한다...
