vuex 예시 코드 추가

--- a/2022/11.md
+++ b/2022/11.md
@@ -17,3 +17,28 @@ project
 - 모든 api 는 actions 에서 사용함. 그런 뒤, mutations 를 이용하여 state 를 커밋해줌.
 - actions 는 dispatch, mutations 는 commit 임.
 - getters 를 만들어 state 를 리턴해주는데, mapGetter 를 사용하면 좀 더 깔끔하게 가능함. (참고)
+
+```js
+import Vue from 'vue';
+import Vuex from 'vuex';
+import mutations from './mutations';
+import actions from './actions';
+
+Vue.use(Vuex);
+
+export const store = new Vuex.Store({
+  state: {
+    news: [],
+    ask: [],
+    jobs: []
+  },
+  getters: {
+    fetchedAsk(state) {
+      return state.ask;
+    }
+  },
+  mutations,
+  actions
+});
+
+```
