iscomposing 관련 내용 추가

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,7 +1,8 @@
 ## 2022-11-02
 
-1. 한글이나 중국어같이 영어가 아닌 글자들은 한 글자가 영어보다 많은 정보를 담고있기 때문에 키입력 순간부터 입력완료 까지 시간이 걸리고, 이는 `keydown` 이벤트가 이미 발생되고 난 후에도 진행중일 수 있다는 것을 의미하고 그 상태를 `isComposing` 이란 event 객체 속성값으로 확인 할 수 있다는 것이다. `isComposing` 이 `true` 인 경우, 아직 글자가 구성되고 있다는 의미라고 한다. 
-대부분 `keydown` 에서 `isCompsing` 이 `true` 일 때, `return` 을 쳐서 해결한다고함.
+1. 한글이나 중국어같이 영어가 아닌 글자들은 한 글자가 영어보다 많은 정보를 담고있기 때문에 키입력 순간부터 입력완료 까지 시간이 걸리고, 이는 `keydown` 이벤트가 이미 발생되고 난 후에도 진행중일 수 있다는 것을 의미하고 그 상태를 `isComposing` 이란 event 객체 속성값으로 확인 할 수 있다는 것이다. `isComposing` 이 `true` 인 경우, 아직 글자가 구성되고 있다는 의미라고 한다. <br/>
+대부분 `keydown` 에서 `isCompsing` 이 `true` 일 때, `return` 을 쳐서 해결한다고함. <br/>
+근데 생각처럼 해결이 잘 되지는 않음...
 
 ## 2022-11-01
 
