v-html, v-text 내용 추가

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,8 @@
+## 2022-11-03
+
+1. v-html, v-text 은 innerHTML 과 innerText 와 같음.
+v-html 의 경우, innerHTML 과 마찬가지로 xss 에 취약하기 때문에 주의해서 사용.
+
 ## 2022-11-02
 
 1. 한글이나 중국어같이 영어가 아닌 글자들은 한 글자가 영어보다 많은 정보를 담고있기 때문에 키입력 순간부터 입력완료 까지 시간이 걸리고, 이는 `keydown` 이벤트가 이미 발생되고 난 후에도 진행중일 수 있다는 것을 의미하고 그 상태를 `isComposing` 이란 event 객체 속성값으로 확인 할 수 있다는 것이다. `isComposing` 이 `true` 인 경우, 아직 글자가 구성되고 있다는 의미라고 한다. <br/>
