vue 에서의 데이터 흐름 처리 및 slot 방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,40 @@
+## 2022-11-04
+
+1. 2가지 데이터 흐름 처리
+ - vuex 를 이용한 흐름처리로 actions 에 처리한 데이터는 state 로 존재하기 때문에 props 를 사용하지 않고 getters 를 이용하여 처리할 수 있음.
+ - 공통 컴포넌트에 대해 각 views 에 props 를 전달하여 처리할 수 있음.
+2. slot 을 이용하여 간단하게 컴포넌트를 공통화 처리 밑 교통정리 가능.
+ - 기존에는 내부에서 v-if 를 사용해서 처리했는데 그러다보니 코드량이나 if 문이 너무 많아지는 것을 확인함.
+ - slot 을 이용하여 교통정리가 가능하고 각 뷰에서 필요한 데이터를 받아서 나타낼 수 있음.
+
+**예시**
+ ```html
+ // views
+<div>
+  <user-profile :info="fetchedUser">
+    <div slot="username">{{ fetchedUser.id }}</div>
+    <span slot="time">{{ 'Joined ' + fetchedUser.created }}, </span>
+    <span slot="karma">{{ fetchedUser.karma }}</span>
+  </user-profile>
+</div>
+
+// components
+<div class="user-container">
+  <div>
+    <i class="fas fa-user"></i>
+  </div>
+  <div class="user-description">
+    <slot name="username">
+      <!-- 상위 컴포넌트에서 정의할 영역 -->
+    </slot>
+    <div class="time">
+      <slot name="time"></slot>
+      <slot name="karma"></slot>
+    </div>
+  </div>
+</div>
+ ```
+
 ## 2022-11-03
 
 1. v-html, v-text 은 innerHTML 과 innerText 와 같음.
