뷰에서 하이오더 컴포넌트 및 이벤트 버스 관련 내용 추가

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,83 @@
+## 2022-11-06
+
+1. 뷰에서 하이오더 컴포넌트.
+ - 컴포넌트의 로직을 재사용하기 위한 기술.
+ - 예를 들어, 리스트 컴포넌트에서 각각 데이터를 뿌리는 방법이 같음. 라우터 이름으로 구분하여 각각 데이터를 뿌려주는 하이오더 컴포넌트를 만듬.
+
+```js
+// 기존 컴포넌트 대신 공통 처리하는 js
+import ListView from '@/views/ListView';
+// 이벤트 버스로 각 컴포넌트끼리 이벤트를 공유하도록 함.
+import bus from '@/utils/bus.js';
+
+export default function createListView(name) {
+  return {
+    // 재사용할 컴포넌트의 옵션들
+    name: name,
+    created() {
+      bus.$emit('start:spinner');
+      setTimeout(() => {
+        this.$store.dispatch('FETCH_LIST', this.$route.name)
+          .then(() => {
+            console.log('fetched')
+            bus.$emit('end:spinner');
+
+          })
+          .catch(err => {
+            console.log(err);
+          });
+      }, 3000);
+    },
+    render(createElement) {
+      return createElement(ListView);
+    }
+  }
+}
+```
+
+2. 이벤트 버스
+ - 예를 들어, 스피너 컴포넌트가 있다. 해당 스피너 컴포넌트에서 emit 을 이용하여 상위로 이벤트를 날릴 수도 있지만, 이벤트 버스를 이용해 이벤트를 전달할 수 있음.
+
+```js
+// bus.js
+// 이벤트 버스는 src/utils/bus.js
+// 이벤트 버스란 빈 이벤트 객체를 통해서 컴포넌트간의 데이터를 주고 받는 것.
+import Vue from 'vue';
+
+// bus.js
+export default new Vue();
+
+// App.vue
+// 이벤트 on/off
+created() {
+  bus.$on('start:spinner', this.startSpinner);
+  bus.$on('end:spinner', this.endSpinner);
+},
+beforeDestroy() {
+  bus.$off('start:spinner', this.startSpinner);
+  bus.$off('end:spinner', this.endSpinner);
+}
+
+// Sub.vue
+// 아래와 같이 액션을 실행하기 전 후로 이벤트를 발생시켜줍니다.
+created() {
+  bus.$emit('start:spinner');
+	created() {
+    bus.$emit('start:spinner');
+    this.$store.dispatch('FETCH_JOB')
+      .then(() => {
+        console.log('fetched')
+        bus.$emit('end:spinner');
+
+      })
+      .catch(err => {
+        console.log(err);
+      });
+  }
+  bus.$emit('end:spinner');
+}
+```
+
 ## 2022-11-04
 
 1. 2가지 데이터 흐름 처리
