--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,44 @@
+## 2022-11-07
+
+1. Vue 에서의 데이터 호출 시점
+ - 뷰 라이프 사이클 훅을 이용하여 created 에서 데이터를 호출
+ - 라우터 네비게이션 가드를 사용해서 데이터를 호출할 수 있음.
+
+라우터 네비게이션 가드 사용시에는 페이지 URL 로 접근 전에 어떠한 행위를 하는 것으로, 화면이 깔끔하게 나올 수 있지만, 사용자 UX 를 고려해서 로딩바, 스피너를 넣어줘야함. <br/>
+created 사용시에는 화면에 빨리 뜨지만, 깔끔하지 않을 수도 있음.
+
+```js
+// 전역가드
+router.beforeEach((to, from, next) => {
+	// to: 이동할 url
+	// from: 현재 url
+	// next: to 에서 지정한 url 로 이동하기 위해 꼭 호출해야 하는 함수
+
+	if (to.matched.some(function(routeInfo) {
+    return routeInfo.meta.authRequired;
+  })) {
+    // 이동할 페이지에 인증 정보가 필요하면 경고 창을 띄우고 페이지 전환은 하지 않음
+    alert('Login Please!');
+  } else {
+    console.log("routing success : '" + to.path + "'");
+    next(); // 페이지 전환
+  };
+});
+
+// 라우터 가드
+var router = new VueRouter({
+  routes: [
+    {
+      path: '/login',
+      component: Login,
+      beforeEnter: function(to, from, next) {
+        // 인증 값 검증 로직 추가
+      }
+    }
+  ]
+})
+```
+
 ## 2022-11-06
 
 1. 뷰에서 하이오더 컴포넌트.
