vue 에서 Dom 접근 방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,13 @@
+## 2022-11-08
+
+1. ref 를 이용하여 Vue 에서 Dom 접근
+
+```html
+<canvas ref="BarChart" id="BarChart" width="400" height="400"></canvas>
+```
+```js
+this.$refs.BarChart
+```
 ## 2022-11-07
 
 1. Vue 에서의 데이터 호출 시점
