컴포넌트 플러그인화방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,27 @@
+## 2022-11-09
+
+1. 컴포넌트 플러그인화. 
+ - src 밑에 plugins 폴더를 만든다.
+ - 폴더 아래에 공통화할 컴포넌트 플러그인파일을 만든다.
+ - main.js 에서 `Vue.use` 를 이용해 플러그인을 등록시켜준다.
+
+이렇게 할시 매번 import 할 필요 없이 사용할 수 있음.
+
+```js
+import { Chart, registerables } from 'chart.js';
+
+Chart.register(...registerables);
+
+export default {
+  install(Vue) {
+    Vue.prototype.$_Chart = Chart;
+    console.log('chart plugin loaded');
+  }
+}
+
+// Vue.use(플러그인)
+```
+
 ## 2022-11-08
 
 1. ref 를 이용하여 Vue 에서 Dom 접근
