Netlify 를 이용한 배포 내용 추가

--- a/2022/11.md
+++ b/2022/11.md
@@ -7,6 +7,25 @@
 
 이렇게 할시 매번 import 할 필요 없이 사용할 수 있음.
 
+2. Netlify를 이용하여 배포
+
+[https://www.netlify.com/](https://www.netlify.com/) 네트리파이라고도 부름.
+
+- Netlify는 웹 애플리케이션 및 동적 웹사이트를 위한 구축.
+- 필요한 레파지토리를 import 한 뒤,  build Settings 를 해주면 됨.
+```
+Base directory: vue-news
+
+Build command: npm run build
+
+Publish directory: vue-news/dist
+```
+정상적으로 완료시에 Preview 가 나올것임.
+
+**중요: SPA 호스팅시에 다른 url 로 이동하면 404 가 나오는데, 리다이렉션 할 수 있는 파일을 추가해주어야함. (각각 웹서버마다 설정해주어야 함.)**
+
+[https://cli.vuejs.org/guide/deployment.html](https://cli.vuejs.org/guide/deployment.html)
+
 ```js
 import { Chart, registerables } from 'chart.js';
 
